# python_project

./: .gitignore  docker-compose.yaml  pyproject.toml
python_project/: main.py
