[tool.poetry]
name = "python-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_project"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.4.1"
fastapi = {extras = ["all"], version = "^0.100.0"}
neo4j = "^5.10.0"
requests = "^2.31.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
